test/scc/stmt/semantic-errors/040.t
void test()
{
    if (1); else break;
}